CustomObjects/objects/blng__TaxIntegration__c.object
<CustomObject>
    <fields>
        <fullName>avablng__AvaTaxAccountNumber__c</fullName>
        <label>AvaTaxAccountNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avablng__AvaTaxClientName__c</fullName>
        <label>AvaTaxClientName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avablng__AvaTaxCompanyCodeLegalEntity__c</fullName>
        <label>AvaTaxCompanyCodeLegalEntity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avablng__AvaTaxEnvironment__c</fullName>
        <label>AvaTaxEnvironment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avablng__AvaTaxLicenseKey__c</fullName>
        <label>AvaTaxLicenseKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avablng__TestMode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestMode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__TaxEngine__c</fullName>
        <label>Tax Engine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TaxEngine</valueSetName>
        </valueSet>
    </fields>
    <label>Tax Integration</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Active__c</columns>
        <columns>blng__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Tax Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>